infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-expiration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-expiration
  template:
    metadata:
      labels:
        app: ticketing-expiration
    spec:
      containers:
        - name: ticketing-expiration
          image: escobar0216/ticketing-expiration:latest
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
