infra/k8s/expiration-worker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-worker
  template:
    metadata:
      labels:
        app: expiration-worker
    spec:
      containers:
        - name: expiration-worker
          image: escobar0216/ticketing-expiration:latest
          command: ["yarn", "worker"]
          resources:
            limits:
              cpu: 100m
              memory: "128Mi"
