infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-auth
  template:
    metadata:
      labels:
        app: ticketing-auth
    spec:
      containers:
        - name: ticketing-auth
          image: escobar0216/ticketing-auth:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-auth-srv
spec:
  type: ClusterIP
  selector:
    app: ticketing-auth
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
