infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-client
  template:
    metadata:
      labels:
        app: ticketing-client
    spec:
      containers:
        - name: ticketing-client
          image: escobar0216/ticketing-client:latest

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-client-srv
spec:
  type: ClusterIP
  selector:
    app: ticketing-client
  ports:
    - port: 3000
      name: ticketing-client
      targetPort: 3000
      protocol: TCP
