infra/k8s/nats-streaming-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-streaming-depl
spec:
  selector:
    matchLabels:
      app: nats-streaming
  template:
    metadata:
      labels:
        app: nats-streaming
    spec:
      containers:
        - name: nats-streaming
          image: nats-streaming:0.17.0
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "ticketing",
            ]

---
apiVersion: v1
kind: Service
metadata:
  name: nats-streaming-srv
spec:
  selector:
    app: nats-streaming
  ports:
    - port: 4222
      name: client
      protocol: TCP
      targetPort: 4222
    - port: 8222
      name: monitoring
      protocol: TCP
      targetPort: 8222
