infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders
  template:
    metadata:
      labels:
        app: ticketing-orders
    spec:
      containers:
        - name: ticketing-orders
          image: escobar0216/ticketing-orders:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-srv
spec:
  type: ClusterIP
  selector:
    app: ticketing-orders
  ports:
    - port: 3000
      targetPort: 8080
