infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders-mongo
  template:
    metadata:
      labels:
        app: ticketing-orders-mongo
    spec:
      containers:
        - name: ticketing-orders-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: ticketing-orders-mongo
  ports:
    - port: 27017
      name: db
      targetPort: 27017
      protocol: TCP
