infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-tickets-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets-mongo
  template:
    metadata:
      labels:
        app: ticketing-tickets-mongo
    spec:
      containers:
        - name: ticketing-tickets-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: ticketing-tickets-mongo
  ports:
    - port: 27017
      name: db
      targetPort: 27017
      protocol: TCP
